Fix issue with resources

--- a/lib/inventarium/cli/templates/service.yaml.erb
+++ b/lib/inventarium/cli/templates/service.yaml.erb
@@ -54,7 +54,7 @@ communications:
     # optional, can be (critical | uncritical)
     criticality:
     # optional list, can be (topic name | queue name | rpc resource | rest resource | gqlschema name)
-    resource:
+    resources:
       -
     # optional
     custom_data:
